refactor: Restructure plugin from disable-plugin tool to troubleshooting dashboard
- Replace complex plugin disable functionality with simple troubleshooting dashboard
- Remove plugin disable forms, multi-selector, and tag input components
- Clean up constants by removing unused email and Gmail-related definitions
- Update main dashboard to show troubleshooting card with navigation
- Add MaintenanceMode service to Init class
- Remove unused data files and connection services
- Update plugin description and initialization flow
- Fix plugin version back to 1.0.0 and update description
- Add error handling and prevent self-disabling in plugin management
- Remove unused styling rules and clean up SCSS
- Update React routing to include troubleshoot page

--- a/assets/src/scss/Index.scss
+++ b/assets/src/scss/Index.scss
@@ -72,11 +72,20 @@
 
 body {}
 
+// .wp-person a:focus .gravatar,
+// .wp-person a:focus,
+// .wp-person a:focus .media-icon img,
+// .wp-person a:focus .plugin-icon {
+// 	color: #043959 !important;
+// 	box-shadow: 0 0 0 0px #2271b1 !important;
+// 	outline: 0px solid transparent !important;
+// }
+
 .wp-person a:focus .gravatar,
-.wp-person a:focus,
-.wp-person a:focus .media-icon img,
-.wp-person a:focus .plugin-icon {
-	color: #043959 !important;
-	box-shadow: 0 0 0 0px #2271b1 !important;
-	outline: 0px solid transparent !important;
+a:focus,
+a:focus .media-icon img,
+a:focus .plugin-icon {
+	color: #043959;
+	box-shadow: 0 0 0 0px #2271b1;
+	outline: 0px solid transparent;
 }
