--- a/assets/src/scss/comingsoon-style.scss
+++ b/assets/src/scss/comingsoon-style.scss
@@ -14,7 +14,7 @@
 body {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	background-image: '';
-	background-size: contain;
+	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 	min-height: 100vh;
