refactor(ui): improve header styling and navigation logic
fix(comingsoon): remove empty roles check and update user access text
refactor(routing): simplify path handling in RouteGuard and Header
style(scss): reset focus styles for links
chore: remove unused QuickPick service initialization

--- a/assets/src/scss/Index.scss
+++ b/assets/src/scss/Index.scss
@@ -85,7 +85,13 @@ body {}
 a:focus,
 a:focus .media-icon img,
 a:focus .plugin-icon {
-	color: #043959;
-	box-shadow: 0 0 0 0px #2271b1;
-	outline: 0px solid transparent;
+	color: unset;
+	box-shadow: unset;
+	outline: unset;
+}
+
+a:active,
+a:hover,
+a:focus {
+	color: unset;
 }
